Closed Bug 1319682 Opened 8 years ago Closed 8 years ago

[TaskTracer] fix compile warning/error on all supported platforms

Categories

(Core :: General, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: schien, Assigned: schien)

References

Details

Attachments

(1 file, 2 obsolete files)

Attached patch fix-tasktracer-warning.patch (obsolete) — Splinter Review
No description provided.
Attachment #8813534 - Flags: feedback?(tlee)
Comment on attachment 8813534 [details] [diff] [review] fix-tasktracer-warning.patch Review of attachment 8813534 [details] [diff] [review]: ----------------------------------------------------------------- It looks great! We should land it.
Attachment #8813534 - Flags: feedback?(tlee) → feedback+
Attachment #8814039 - Attachment is obsolete: true
Attachment #8813534 - Attachment is obsolete: true
Summary: [TaskTracer] fix compile warning → [TaskTracer] fix compile warning/error on all supported platforms
Comment on attachment 8813930 [details] Bug 1319682 - fix compile warning/error in TaskTracer, https://reviewboard.mozilla.org/r/95232/#review95504 Make it more portable! Thanks!
Attachment #8813930 - Flags: review?(tlee) → review+
Pushed by schien@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cc39a32513fe fix compile warning/error in TaskTracer, r=sinker
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: