Bug 1319682 - fix compile warning/error in TaskTracer, r=sinker

MozReview-Commit-ID: 4E0ThIAZAxC

--HG--
extra : rebase_source : d1cb4ae28e7d10b5bdd3d87d6a97413e2d204057